app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sovitasovita-driver-cap-api-deployment
  labels:
    app: sovitasovita-driver-cap-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sovitasovita-driver-cap-api
  template:
    metadata:
      labels:
        app: sovitasovita-driver-cap-api
    spec:
      containers:
        - name: sovitasovita-driver-cap-api
          image: kshrdautopilot/sovitasovita-driver-cap-api
          ports:
            - containerPort: 8080
